# musivst

./: CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
Source/: AudioEngine.cpp  AudioEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h  PluginHostManager.cpp  PluginHostManager.h  SettingsManager.cpp  SettingsManager.h
Source/UI/: DevicePanel.cpp  DevicePanel.h  LevelMeter.cpp  LevelMeter.h  PluginPanel.cpp  PluginPanel.h
config/: default-settings.json
